# DotConfig

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build.yml  bumpversion.yml  lint.yml  publish.yml  test.yml
dot_notation_dict/: __init__.py
dotcon/: __init__.py
dotdict/: __init__.py
src/: __init__.py
tests/: test_dot_dict.py
