[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "dot-dict"
requires-python = ">= 3.11"

authors = [{ name = "Aidan Inceer", email = "aidaninceer0@gmail.com" }]

description = "A simple package which converts a standard python dictionary to a dot accessible object."
readme = "README.md"
license = { file = "LICENSE" }

keywords = ["dot", "dict"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/AidanInceer/DotDict"
