[tool.poetry]
name = "dotcon"
version = "0.3.0"
description = "A simple package which converts a standard python dictionary to a dot accessible object."
authors = ["AidanInceer <aidaninceer0@gmail.com>"]
license = "LICENCE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "0.3.0"
version_files = ["README.md", "pyproject.toml:version"]
name = "cz_conventional_commits"
tag_format = "$major.$minor.$patch"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_incremental = true
